--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-server": "~12.2.2",
     "@angular/router": "~12.2.2",
     "bootstrap": "^5.1.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "odata-filter-builder": "^1.0.0",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
@@ -46,6 +48,5 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "typescript": "~4.2.3"
-  },
-  "optionalDependencies": {}
+  }
 }
