--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MongoConnection": "mongodb://root:example@localhost:27017/Employee?authSource=admin"
+    "MongoConnection": "mongodb://localhost:27017,localhost:27018,localhost:27019/Employee?replicaSet=rs0&readPreference=primary&ssl=false"
   },
   "Logging": {
     "LogLevel": {
